--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=0aac714df22647d6e11c03a3bacb3623
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://thomas@weplus.fr:zokfej-sEvtyt-5suxdu@smtp.ionos.fr:465
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -30,3 +30,4 @@ APP_SECRET=0aac714df22647d6e11c03a3bacb3623
 DATABASE_URL="mysql://root:@127.0.0.1:3306/weplus?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+ 
