--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,4 +1,8 @@
 twig:
     form_themes: ['bootstrap_4_layout.html.twig']
     default_path: '%kernel.project_dir%/templates'
+
+    paths:
+        '%kernel.project_dir%/public/styles': styles
+        '%kernel.project_dir%/public/assets/img': img
     
