--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,11 +6,17 @@
 parameters:
     categorie_image_directory: '%kernel.project_dir%/public/assets/img/img_catego'
     service_image_directory: '%kernel.project_dir%/public/assets/img/img_service'
+    service_brochure_directory: '%kernel.project_dir%/public/assets/formations'
     matos_categorie_image_directory: '%kernel.project_dir%/public/assets/img/img_matos_catego'
     matos_image_directory: '%kernel.project_dir%/public/assets/img/img_matos'
     cause_image_directory: '%kernel.project_dir%/public/assets/img/img_cause'
     asso_image_directory: '%kernel.project_dir%/public/assets/img/img_assos'
     entreprise_logo_directory: '%kernel.project_dir%/public/assets/img/logo_entreprise'
+    router.request_context.host: 'example.org'
+    router.request_context.scheme: 'https'
+    router.request_context.base_url: 'my/path'
+    asset.request_context.base_path: '%router.request_context.base_url%'
+    asset.request_context.secure: true
 
 services:
     # default configuration for services in *this* file
